Changes front-end based on reviewing

--- a/app/assets/stylesheets/components/_internship_professional_status.scss
+++ b/app/assets/stylesheets/components/_internship_professional_status.scss
@@ -23,7 +23,7 @@
       flex-direction: column;
       text-align: center;
       color: #8b8c8f;
-      padding: 0;
+      padding: 3px;
       height: 100%;
       width: 100%;
       display: flex;
