--- a/app/views/ratings/_section_1.html.erb
+++ b/app/views/ratings/_section_1.html.erb
@@ -42,13 +42,7 @@
         </p>
       </a>
     </div>
-<!--   <div class="description-breadcrumbs">
-
-
-</div> -->
 </div>
-
-<!-- <h2>Ik ben een test</h2> -->
 <div class="header-section-1">
   <div class="icon-main">
   </div>
@@ -56,7 +50,7 @@
     <h3>
       Review your experience as an intern
       <span class="star-information-popover-link">
-        <i class="fa fa-info-circle" data-target="#information-text-section-1"></i>
+      <div class="information-button" data-target="#information-text-section-1"></div>
       </span>
     </h3>
     <p>
