--- a/app/assets/stylesheets/components/_internship_net_salary.scss
+++ b/app/assets/stylesheets/components/_internship_net_salary.scss
@@ -22,7 +22,7 @@
     label {
       text-align: center;
       color: #8b8c8f;
-      padding: 0;
+      padding: 16px;
       height: 100%;
       width: 100%;
       display: flex;
@@ -47,7 +47,7 @@
       border-top-right-radius: 6px;
       border-bottom-right-radius: 6px;
     }
-    &:nth-child(3),&:nth-child(4),&:nth-child(5),&:nth-child(6),&:nth-child(7) {
+    &:nth-child(2),&:nth-child(3),&:nth-child(4),&:nth-child(5),&:nth-child(6) {
       border-left: 2px solid #e0e5ec;
     }
   }
