--- a/app/assets/stylesheets/components/_rating_form.scss
+++ b/app/assets/stylesheets/components/_rating_form.scss
@@ -16,7 +16,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin-top: 35px;
+  margin-top: 65px;
 }
 
 #section_2 {
@@ -70,6 +70,14 @@ and (-webkit-min-device-pixel-ratio: 1) {
       line-height: 1;
     }
   }
+  .information-button {
+    background-image: image-url('png_@1x/btn_informative-desktop@1x.png');
+    float: right;
+    height: 22px;
+    width: 22px;
+    margin-top: 3px;
+    margin-left: 3px;
+  }
 }
 
 /// Media query for mobile w/ 320px width, according to designs
@@ -96,7 +104,8 @@ and (orientation: portrait) {
   .divider {
     height: 3px;
     border: solid 1px #dddddd;
-    margin-top: 9px;
+    margin-top: 8px;
+    margin-bottom: 9px;
   }
 
   .header-section-2 {
@@ -135,10 +144,9 @@ and (orientation: portrait) {
 
 // CSS for end form for mobile versions
 .header-end-form {
-  max-width: 651px;
   position: relative;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   margin-bottom: 20px;
 }
 
@@ -148,18 +156,17 @@ and (max-device-width: 480px)
 and (-webkit-min-device-pixel-ratio: 2)
 and (orientation: portrait) {
 
-.icon-end {
-  display: none;
-  width: 42px;
-}
+  .icon-end {
+    display: none;
+  }
 
-.or-end-form {
-  text-align: center;
-}
+  .or-end-form {
+    text-align: center;
+  }
 
-.divider-end-form {
-  display: none;
-}
+  .divider-end-form {
+    display: none;
+  }
 }
 ///
 
@@ -173,7 +180,7 @@ and (-webkit-min-device-pixel-ratio: 1) {
     background-image: image-url('png_@1x/icon_privacy@1x.png');
     color: #4c4a4e;
     height: 37px;
-    width: 43px;
+    width: 37px;
     float: left;
     margin: 14px;
   }
@@ -184,49 +191,55 @@ and (-webkit-min-device-pixel-ratio: 1) {
     height: 3px;
     border: solid 1px #dddddd;
   }
+  .text-end-form {
+    margin-top: 8px;
+    p {
+      font-size: 15px
+    }
+    i {
+      color: #c3c3c3;
+    }
+  }
+  .divider-center {
+    padding-left: 180px;
+    margin: 28px 0px;
+  }
 }
 
 
 .facebook-button {
-  // background-image: image-url('png_@1x/btn_signin_facebook_desktop@1x.png');
   border-radius: 4px;
   background-color: #3b5998;
   border: solid 1px #3b5998;
-  max-height: 52px;
+  height: 52px;
   max-width: 380px;
   margin-top: 20px;
-  margin-bottom: 10px;
   display: flex;
   justify-content: flex-start;
-  align-items: baseline;
+  align-items: center;
   color: #ffffff;
   p {
     color: #ffffff;
     text-align: center;
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: center;
-}
+    margin: 0px !important;
+  }
 }
 
 .linkedin-button {
   border-radius: 4px;
-  max-height: 52px;
+  height: 52px;
   max-width: 380px;
   margin-top: 20px;
-  margin-bottom: 10px;
   background-color: #0077b5;
   display: flex;
   justify-content: flex-start;
-  align-items: baseline;
+  align-items: center;
   color: #ffffff;
   p {
     color: #ffffff;
     text-align: center;
-  // display: flex;
-  // // flex-direction: column;
-  // justify-content: center;
-}
+    margin: 0px !important;
+  }
 }
 
 .fafa-icon {
@@ -330,12 +343,6 @@ and (orientation: portrait) {
   color: #3b393d;
 }
 
-.star-information-popover-link {
-  // FIX ME
-  // background-image: image-url('png_@1x/btn_informative-desktop@1x.png');
-  // height: 10px;
-  // width: 10px;
-}
 
 // CSS for the error messages on section 1
 .star_error_message {
@@ -417,12 +424,6 @@ and (orientation: portrait) {
     .check-input {
       &:checked ~ .label-section-2-selection .styled-meal-icon {
         color: #ffbd23;
-        // FIX ME: get the borders when selected
-        // in proportion
-        // border: 2px solid #ffbd23;
-        // height: 68px;
-        // max-width: 120px;
-        // padding: 10px;
       }
     }
     label {
@@ -438,7 +439,7 @@ and (orientation: portrait) {
 
 
 
-//// STOMME KUT ICONEN WERKEN NOG TOTAAAAL NIET
+//// ICONS
 
 .rating_internship_selection-2-icons {
   .radio {
@@ -559,7 +560,7 @@ and (orientation: portrait) {
   }
 }
 
-///// EINDE VAN STOMME KUTICONEN
+///// END ICONS
 
 
 //////
@@ -571,6 +572,6 @@ and (orientation: portrait) {
     line-height: 30px;
     color: #4c4a4e;
     // TMP
-    margin-bottom: 35px
+    margin-bottom: 20px;
   }
 }
