--- a/app/views/ratings/_internship_form_end.html.erb
+++ b/app/views/ratings/_internship_form_end.html.erb
@@ -15,8 +15,8 @@
   </div>
   <div class="titles-section-2">
   <!-- TMP: -->
-  <h4>Please sign up with your name and email</h4>
-    <!-- <h4>Please choose 1 option</h4> -->
+  <!-- <h4>Please sign up with your name and email</h4> -->
+    <h4>Please choose 1 option</h4>
   </div>
   <div class="row">
     <div class="col-xs-12 col-md-6">
@@ -30,8 +30,12 @@
       </div>
     </div>
   </div>
-  <hr>
-<!--   <div class="row">
+  <div class="divider-center">
+  <div style="width: 430px; height: 15px; border-bottom: solid 1px #e0e5ec; text-align: center">
+      <span style="font-size: 18px; background-color: #F6F8FA; padding: 0 10px; color: #4c4a4e; ">  or  </span>
+    </div>
+    </div>
+  <div class="row">
     <div class="signin-fb-linkedin">
       <div class="col-xs-12 col-md-6">
         <div class="or-end-form">or</div>
@@ -56,4 +60,4 @@
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
