--- a/app/views/ratings/summary.html.erb
+++ b/app/views/ratings/summary.html.erb
@@ -1,67 +1,77 @@
-<div class="summary-page">
-  <div class="top-summary-page">
-   <div class="thumbs-up-icon"></div>
-   <h4><b>Thank you for your feedback!</b></h4>
- </div>
- <div id="summary" class="summary_section">
- <div class="summary-headline">
-    <div class="circle">
-      <!-- Variables @score / @glad_to_hear / @good_bad_statement -->
-      <!-- Get created in the controller and send here -->
-      <p><%= @score %> <i class="fa fa-star"></i></p>
+<div class="body-summary">
+  <div class="summary-page">
+    <div class="top-summary-page">
+     <div class="thumbs-up-icon"></div>
+     <h4><b>Thank you for your feedback!</b></h4>
+   </div>
+   <div id="summary" class="summary_section">
+     <div class="summary-headline">
+      <div class="circle">
+        <!-- Variables @score / @glad_to_hear / @good_bad_statement -->
+        <!-- Get created in the controller and send here -->
+        <p><%= @score %> <i class="fa fa-star"></i></p>
+      </div>
+      <div class="outcome-review">
+        <p><b><%= @glad_to_hear %></b></p>
+        <h2><%= @good_bad_statement %></h2>
+      </div>
     </div>
-    <div class="outcome-review">
-      <p><b><%= @glad_to_hear %></b></p>
-      <h2><%= @good_bad_statement %></h2>
+    <div class="stars-summary">
+      <div class="star-coloring-summary stars-left">
+        <!-- @display_values_stars[left|right] is a hash coming from the controller -->
+        <% @display_values_stars_left.each do |name_value, score_value| %>
+        <%= render partial: 'star_summary', locals: { score_value: score_value, name_value: name_value } %>
+        <% end %>
+      </div>
+      <div class="star-coloring-summary">
+        <% @display_values_stars_right.each do |name_value, score_value| %>
+        <%= render partial: 'star_summary', locals: { score_value: score_value, name_value: name_value} %>
+        <% end %>
+      </div>
     </div>
-  </div>
-  <div class="stars-summary">
-    <div class="star-coloring-summary stars-left">
-      <!-- @display_values_stars[left|right] is a hash coming from the controller -->
-      <% @display_values_stars_left.each do |name_value, score_value| %>
-      <%= render partial: 'star_summary', locals: { score_value: score_value, name_value: name_value } %>
-      <% end %>
-    </div>
-    <div class="star-coloring-summary">
-      <% @display_values_stars_right.each do |name_value, score_value| %>
-      <%= render partial: 'star_summary', locals: { score_value: score_value, name_value: name_value} %>
-      <% end %>
-    </div>
-  </div>
-  <!-- <div class="divider"></div> -->
-<!--   <div class="share_and_newsletter-container">
-  <div class="share-field card-summary"> -->
-      <!-- <div class="title-share-card">
-        <div class="airplane-icon">
+    <div class="divider"></div>
+    <div class="share_and_newsletter-container">
+      <div class="share-field card-summary">
+        <div class="title-share-card">
+          <div class="airplane-icon">
+          </div>
+          <div class="text-share-card">
+            <p>Share InternsGoPro and get a chance to <b>win a trip to <u>Madrid!</u></b></p>
+          </div>
         </div>
-        <div class="text-share-card">
-          <p> text text text </p> -->
-        <!-- <p>Share InternsGoPro and get a chance to <b>win a trip to <u>Madrid</u></b></p>
-      </div>-->
-      <!-- </div>  -->
-      <!-- <div class="facebook-share-button">
+        <div class="facebook-share-button">
           <div class="fafa-icon-share">
             <i class="fa fa-facebook" aria-hidden="true"></i>
           </div>
           <div class="text-button-social">
             <p>Share on <b>Facebook</b></p>
           </div>
-        </div> -->
-      <!-- <div class="twitter-share-button">
+        </div>
+        <div class="twitter-share-button">
           <div class="fafa-icon-share">
             <i class="fa fa-twitter" aria-hidden="true"></i>
           </div>
           <div class="text-button-social">
             <p>Share on <b>Twitter</b></p>
           </div>
-        </div> -->
+        </div>
       </div>
-      <!-- <div class="newsletter-field card-summary"> -->
-<!--       <div class="title-newsletter-card">
-        <div class="envelope-icon"></div>
-        <p>Subscribe to our newsletter to see new certified internships.</p>
-      </div> -->
-      <!-- </div> -->
+      <div class="newsletter-field card-summary">
+        <div class="title-newsletter-card">
+          <div class="envelope-icon"></div>
+          <p>Subscribe to our newsletter<br>to see new certified internships.</p>
+        </div>
+        <div class="submit-newsletter">
+          <form action="/">
+            <div class="input-newsletter">
+              <input type="text", placeholder="Email">
+            </div>
+            <div class="submit-newsletter-button">
+              <input type="submit", value="Subscribe", class="btn-newsletter">
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
   </div>
   <div class="certified-internships">
@@ -130,14 +140,14 @@
           </div>
         </div>
       </div>
-     <!--  <div class="button-container-summary">
-        <div class="btn-green btn btn-right">
-          Needs to be changed to index offers
-          # link_to "View More", ratings_path, class: "link-button" %>
+      <div class="button-container-summary">
+        <div class="btn-view-offers">
+          <%= link_to "View More", offers_path, class: "see-offers-button" %>
         </div>
-      </div> -->
+      </div>
     </div>
   </div>
+</div>
 </div>
 </div>
 </div>
