Add color buttons through colorpicker, not through zeplin

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -15,9 +15,9 @@
 
 .btn-green {
   color: white;
-  background-color: #74b05d;
+  background-color:  #5CB85C;
   &:hover {
-    background-color: #74b05d;
+    background-color:  #5CB85C;
     color: white;
   }
 }
