--- a/app/assets/stylesheets/components/_rating_form.scss
+++ b/app/assets/stylesheets/components/_rating_form.scss
@@ -26,7 +26,7 @@
     font-weight: 600;
     font-size: 16px;
     line-height: 30px;
-    color: #4c4a4e;
+    color: #5B585D;
   }
 }
 
@@ -263,7 +263,7 @@ and (-webkit-min-device-pixel-ratio: 1) {
       font-weight: 600;
       font-size: 16px;
       line-height: 30px;
-      color: #4c4a4e;
+      color: #5B585D;
     }
     i {
       color: #d1d1d1;
