--- a/app/views/ratings/_internship_contract_job_offer.html.erb
+++ b/app/views/ratings/_internship_contract_job_offer.html.erb
@@ -1,7 +1,7 @@
   <!-- CONTRACT & JOB OFFER -->
   <div class="row">
     <div class="col-xs-12 col-lg-5">
-      <div class="yes-no-field">
+      <div class="yes-no-field append-error-message-contract">
         <div class="titles-section-2">
           <h4 class="sub-header">
             Did you sign a contract?
@@ -33,7 +33,7 @@
       </div>
     </div>
     <div class="col-xs-12 col-lg-7">
-      <div class="yes-no-field">
+      <div class="yes-no-field append-error-message-contract">
         <div class="titles-section-2">
           <h4 class="sub-header">
             Were you offered a job at the end of your internship?
