--- a/app/views/ratings/_internship_status.html.erb
+++ b/app/views/ratings/_internship_status.html.erb
@@ -2,7 +2,7 @@
   Status During Internship
 </h4>
 
-<div class="form-group radio_buttons required rating_professional_status">
+<div class="form-group radio_buttons required rating_professional_status append-error-message-status">
   <input type="hidden" name="rating[professional_status]" value="">
   <span class="radio">
     <label for="rating_professional_status_student">
