--- a/app/views/ratings/_internship_job_info.html.erb
+++ b/app/views/ratings/_internship_job_info.html.erb
@@ -1,7 +1,7 @@
   <div class="row">
     <div class="col-xs-12 col-lg-6">
       <div class="dropdown-button-container">
-        <%= f.input :job_position, placeholder: 'Job Position', label: false, input_html: {class: "rating-form-fields"} %>
+        <%= f.input :job_position, placeholder: 'Job Position', label: false, input_html: {class: "rating-form-fields check-string-section-2 render-error-message"} %>
         <div class="dropdown-arrow">
           <div class="arrow"></div>
         </div>
