Changing position of green button, changing wording of top words

--- a/app/views/ratings/_section_1.html.erb
+++ b/app/views/ratings/_section_1.html.erb
@@ -20,7 +20,7 @@
         GENERAL
       </p>
       <p>
-        DETAILS
+        DETAILED
       </p>
     </div>
   </div>
@@ -38,7 +38,7 @@
       </div>
       <a href="#" class="section_switch_button" data-target="#section_2">
         <p>
-          DETAILS
+          DETAILED
         </p>
       </a>
     </div>
