--- a/app/views/ratings/_section_2.html.erb
+++ b/app/views/ratings/_section_2.html.erb
@@ -19,7 +19,7 @@
         GENERAL
       </p>
       <p>
-        DETAILS
+        DETAILED
       </p>
     </div>
   </div>
@@ -39,7 +39,7 @@
         2
       </div>
       <p>
-        DETAILS
+        DETAILED
       </p>
     </div>
   </div>
@@ -86,4 +86,3 @@
 <%= f.submit "You're done!", id: "submit_rating", class: "btn btn-green btn-right" %>
 
 </div>
-
