--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -6,24 +6,24 @@ Lorem ipsum sit amer
 <div class="container">
 
 <div class="row">
-  <div class="col-md-12"><h2>Find the Best Internships</h2><br><p>We help you identify great employers in Europe with the best internships <br>to boost your skills and kick-start your career.</p></div>
+  <div class="col-md-12"><div class="title-class">Find the Best Internships</div><br><div class="paragraph">We help you identify great employers in Europe with the best internships <br>to boost your skills and kick-start your career.</div></div>
 </div>
   <div class="row">
     <div class="col-md-4">
       <img src ="/route-page/Guy.jpg">
-        <h2>Find paid internship offers</h2>
-        <p>Our “European Label for best Internships” helps you identify employers that care about your internship experience and spend a lot of effort in designing an inspiring learning journey.</p>
+        <div class="title-class">Find paid internship offers</div>
+        <div class="paragraph">Our “European Label for best Internships” helps you identify employers that care about your internship experience and spend a lot of effort in designing an inspiring learning journey.</div>
 
     </div>
     <div class="col-md-4">
       <img src ="/route-page/map.jpg">
-        <h2>Identify the employers that hire interns</h2>
-        <p>It is not easy to recognise and find the employers that will help you kick-start your career. Look for employers with the label; they often offer job opportunities after their internships.</p>
+        <div class="title-class">Identify the employers that hire interns</div>
+        <div class="paragraph">It is not easy to recognise and find the employers that will help you kick-start your career. Look for employers with the label; they often offer job opportunities after their internships.</div>
     </div>
     <div class="col-md-4">
       <img src ="/route-page/label-1.jpg">
-        <h2>Create Transparency</h2>
-        <p>Write a review of your internship and get an insider’s view of the company you are interested in. The European Label for the Best Internships give you also all the information you need before applying.</p>
+        <div class="title-class">Create Transparency</div>
+        <div class="paragraph">Write a review of your internship and get an insider’s view of the company you are interested in. The European Label for the Best Internships give you also all the information you need before applying.</div>
     </div>
   </div>
 
@@ -34,20 +34,20 @@ Lorem ipsum sit amer
   </div>
 
 <div class="container">
-  <h2>InternsGoPro in the press:</h2><br>
+  <div class="title-class">InternsGoPro in the press:</div><br>
   <img src="route-page/press-logos.png" width="100%">
 
-  <br><br><h2>Endorsed by the European Institutions</h2><br><br>
+  <br><br><div class="title-class">Endorsed by the European Institutions</div><br><br>
   <div class="row">
     <div class="col-md-6">
       <img src="/route-page/Thyssen.jpg">
-      <h2> Marianne Thyssen, European Commissioner for Employment</h2>
-      <p>“I warmly welcome the work of InternsGoPro which complements our efforts at EU level to promote quality traineeships”</p>
+      <div class="title-class"> Marianne Thyssen, European Commissioner for Employment</div>
+      <div class="paragraph">“I warmly welcome the work of InternsGoPro which complements our efforts at EU level to promote quality traineeships”</div>
     </div>
     <div class="col-md-6">
       <img src="/route-page/Schulz.jpg">
-      <h2>Martin Schulz, Former President of the European Parliament</h2>
-      <p>“Very much share spirit & objective of the International Interns Day for paid, quality, formal internships – stepping stone to full employment/further education”.</p>
+      <div class="title-class">Martin Schulz, Former President of the European Parliament</div>
+      <div class="paragraph">“Very much share spirit & objective of the International Interns Day for paid, quality, formal internships – stepping stone to full employment/further education”.</div>
     </div>
 
   </div>
@@ -59,25 +59,25 @@ Lorem ipsum sit amer
 
 </div>
 <div class="container">
-  <h2>Take their word for it</h2>
-  <p>Certified employers talking about their committments</p>
+  <div class="title-class">Take their word for it</div>
+  <div class="paragraph">Certified employers talking about their committments</div>
   <div class="col-md-4">
     <img src="/route-page/Nymann.jpg" align="center">
-    <p>“We are delighted that we have been awarded the InternsGoPro Champion level Quality Label and that we ‘practice what we preach’ and lead the way in providing internships of good quality.”</p>
+    <div class="paragraph">“We are delighted that we have been awarded the InternsGoPro Champion level Quality Label and that we ‘practice what we preach’ and lead the way in providing internships of good quality.”</div>
     <br>
-    <p><strong>Johanna Nyman, President of the European Youth Forum</strong></p>
+    <div class="paragraph"><strong>Johanna Nyman, President of the European Youth Forum</strong></div>
 
   </div>
   <div class="col-md-4">
     <img src="/route-page/Vaughan.jpg">
 
-    <p>“The chamber has committed to a brand new standard for quality internships with InternsGoPro. It’s part of our commitment to be a great employer, because it makes good business sense”.</p>
-    <p><strong>Glenn Vaughan, Chief Executive British Chamber of Commerce Belgium</strong></p>
+    <div class="paragraph">“The chamber has committed to a brand new standard for quality internships with InternsGoPro. It’s part of our commitment to be a great employer, because it makes good business sense”.</div>
+    <div class="paragraph"><strong>Glenn Vaughan, Chief Executive British Chamber of Commerce Belgium</strong></div>
   </div>
   <div class="col-md-4">
     <img src="/route-page/Laffarge.jpg">
-    <p>“We work with InternsGoPro as we fully believe that high quality internships are essential to young people today”.</p><br>
-    <p><strong>Sylvie Laffarge,Director of Citizenship Europe at Microsoft Europe</strong>
+    <div class="paragraph">“We work with InternsGoPro as we fully believe that high quality internships are essential to young people today”.</div><br>
+    <div class="paragraph"><strong>Sylvie Laffarge,Director of Citizenship Europe at Microsoft Europe</strong>
   </div>
 
 </div>
