--- a/app/views/ratings/_section_1.html.erb
+++ b/app/views/ratings/_section_1.html.erb
@@ -90,7 +90,7 @@
             <input class="radio_buttons optional hide-input" type="radio" value="true" name="rating[rating_recommendation]" id="rating[rating_recommendation]">
             <div class="section-2-radio">
               <div class="styled-radio-button"></div>
-              Yes
+              <div class="yes-no-padding"> Yes</div>
             </div>
           </label>
         </span>
@@ -99,7 +99,7 @@
             <input class="radio_buttons optional hide-input" readonly="readonly" type="radio" value="false" name="rating[rating_recommendation]" id="rating_rating_recommendation_false">
             <div class="section-2-radio">
               <div class="styled-radio-button"></div>
-              No
+              <div class="yes-no-padding"> No</div>
             </div>
           </label>
         </span>
