--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -9,25 +9,25 @@ Lorem ipsum sit amer
 
 <div class="row">
   <div class="col-md-12">
-    <h2>We certify & promote employers with outstanding internship programmes</h2><br>
+    <div class="title-class">We certify & promote employers with outstanding internship programmes</div><br>
   </div>
 </div>
   <div class="row">
     <div class="col-md-4">
       <img src ="/label-page/girl.png" margin-bottom:"30px">
-        <h2>Attract young talents & boost your employer brand</h2>
-        <p>Stand out as a great employer! Your certified offers reach 100K students and young professionals through our networks of connected job sites, universities and partners.</p>
+        <div class="title-class">Attract young talents & boost your employer brand</div>
+        <div class="paragraph">Stand out as a great employer! Your certified offers reach 100K students and young professionals through our networks of connected job sites, universities and partners.</div>
 
     </div>
     <div class="col-md-4">
       <img src ="/label-page/uniplaces.png">
-        <h2>Showcase your commitments to youth</h2>
-        <p>By getting certified, you show your efforts to bridge the skills gap between education & the labour market. You offer internships accessible to all and with a high learning content equipping young people with the necessary skills to get a job.</p>
+        <div class="title-class">Showcase your commitments to youth</div>
+        <div class="paragraph">By getting certified, you show your efforts to bridge the skills gap between education & the labour market. You offer internships accessible to all and with a high learning content equipping young people with the necessary skills to get a job.</div>
     </div>
     <div class="col-md-4">
       <img src ="/label-page/intelligence.png">
-        <h2>Human Ressources Intelligence</h2>
-        <p>You want to keep on improving the quality of your internship program? We help you understand your interns’ needs and provide you with detailed reports including statistics and ratings; internally and in your sector.</p>
+        <div class="title-class">Human Ressources Intelligence</div>
+        <div class="paragraph">You want to keep on improving the quality of your internship program? We help you understand your interns’ needs and provide you with detailed reports including statistics and ratings; internally and in your sector.</div>
     </div>
   </div>
 
@@ -38,26 +38,27 @@ Lorem ipsum sit amer
 </div>
 
 <div class="container">
-  <h2>Take their word for it</h2>
-  <p>Certified employers talking about their committments</p>
+  <div class="title-class">Take their word for it</div>
+  <div class="paragraph">Certified employers talking about their committments</div>
   <div class="col-md-4">
     <img src="/route-page/Nymann.jpg" align="center">
-    <p class="margin-top">“We are delighted that we have been awarded the InternsGoPro Champion level Quality Label and that we ‘practice what we preach’ and lead the way in providing internships of good quality.”</p>
+    <div class="margin-top">“We are delighted that we have been awarded the InternsGoPro Champion level Quality Label and that we ‘practice what we preach’ and lead the way in providing internships of good quality.”</div>
 
-    <p><strong>Johanna Nyman, President of the European Youth Forum</strong></p>
+    <div class="paragraph"><strong>Johanna Nyman, President of the European Youth Forum</strong></div>
 
   </div>
   <div class="col-md-4">
     <img src="/route-page/Vaughan.jpg">
 
-    <p class="margin-top">“The chamber has committed to a brand new standard for quality internships with InternsGoPro. It’s part of our commitment to be a great employer, because it makes good business sense”.</p>
-    <p><strong>Glenn Vaughan, Chief Executive British Chamber of Commerce Belgium</strong></p>
+    <div class="margin-top">“The chamber has committed to a brand new standard for quality internships with InternsGoPro. It’s part of our commitment to be a great employer, because it makes good business sense”.</div>
+    <div class="paragraph"><strong>Glenn Vaughan, Chief Executive British Chamber of Commerce Belgium</strong></div>
   </div>
   <div class="col-md-4">
     <img src="/route-page/Laffarge.jpg">
-    <p class="margin-top">“We work with InternsGoPro as we fully believe that high quality internships are essential to young people today”.</p>
-    <p><br><strong>Sylvie Laffarge, Director of Citizenship Europe at Microsoft Europe</strong>
+    <div class="margin-top">“We work with InternsGoPro as we fully believe that high quality internships are essential to young people today”.</div>
+    <div class="paragraph"><br><strong>Sylvie Laffarge, Director of Citizenship Europe at Microsoft Europe</strong>
   </div>
+</div>
 
   <div class="row">
     <div class="col-md-12">
@@ -71,24 +72,24 @@ Lorem ipsum sit amer
 
 <div class="container">
 
-  <h2>Endorsed by the European Institutions</h2><br>
+  <div class="title-class">Endorsed by the European Institutions</div><br>
   <div class="row">
     <div class="col-md-6">
       <img src="/label-page/Thyssen.png">
-      <h2> Marianne Thyssen, European Commissioner for Employment</h2>
-      <p>“I warmly welcome the work of InternsGoPro which complements our efforts at EU level to promote quality traineeships”</p>
+      <div class="title-class"> Marianne Thyssen, European Commissioner for Employment</div>
+      <div class="paragraph">“I warmly welcome the work of InternsGoPro which complements our efforts at EU level to promote quality traineeships”</div>
     </div>
     <div class="col-md-6">
       <img src="/label-page/Vassiliou.png">
-      <h2>Androulla Vassiliou, Former European Commissioner for Education, a.D.</h2>
-      <p>“The European Quality Label will make an invaluable contribution to the cause of interns”.</p>
+      <div class="title-class">Androulla Vassiliou, Former European Commissioner for Education, a.D.</div>
+      <div class="paragraph">“The European Quality Label will make an invaluable contribution to the cause of interns”.</div>
     </div>
     <div class="col-md-4">
     </div>
   </div>
 
   <div class="container">
-    <h2>InternsGoPro in the press:</h2><br>
+    <div class="title-class">InternsGoPro in the press:</div><br>
     <img src="route-page/press-logos.png" width="100%">
 
   </div>
@@ -99,38 +100,38 @@ Lorem ipsum sit amer
 
   <div class="row">
     <div class="col-md-12">
-      <h2>3 simple & effective steps to get the label</h2><br>
+      <div class="title-class">3 simple & effective steps to get the label</div><br>
     </div>
 
   <div class="row">
     <div class="col-md-4">
       <img src ="/label-page/guy.jpg">
-        <h2>1. Quality assessment interview</h2>
-        <p>We conduct an interview on the quality of your internships. Our label has 6 quality criteria and 23 quality indicators. Together we fill in our “Employer Commitment Scorecard” and assess whether your internship programme is eligible to one of our 3 levels of quality: Advanced, Excellent, Champion</p>
+        <div class="title-class">1. Quality assessment interview</div>
+        <div class="paragraph">We conduct an interview on the quality of your internships. Our label has 6 quality criteria and 23 quality indicators. Together we fill in our “Employer Commitment Scorecard” and assess whether your internship programme is eligible to one of our 3 levels of quality: Advanced, Excellent, Champion</div>
 
     </div>
     <div class="col-md-4">
       <img src ="/label-page/label-1.jpg">
-        <h2>2. Committing to the best standard & benefiting</h2>
-        <p>We support you in bringing your internship programme to the highest standards.  Once you are ready to publicly commit & sign up for the label criteria, you are granted the label licence & you can immediately benefit from the promotion services within your:</p>
+        <div class="title-class">2. Committing to the best standard & benefiting</div>
+        <div class="paragraph">We support you in bringing your internship programme to the highest standards.  Once you are ready to publicly commit & sign up for the label criteria, you are granted the label licence & you can immediately benefit from the promotion services within your:</div>
     </div>
     <div class="col-md-4">
       <img src ="/label-page/keyboard.png">
-        <h2>3. Monitoring your performance</h2>
-        <p>To make sure you maintain yourself at the highest standards, we introduced a online rating system that confirm the good implementation of your commitments. Interns rate their experience freely & we moderate the reviews to make sure they are trustworthy and valuable HR reports.</p>
+        <div class="title-class">3. Monitoring your performance</div>
+        <div class="paragraph">To make sure you maintain yourself at the highest standards, we introduced a online rating system that confirm the good implementation of your commitments. Interns rate their experience freely & we moderate the reviews to make sure they are trustworthy and valuable HR reports.</div>
     </div>
   </div>
 
-<h2> Get in touch with us</h2>
+<div class="title-class"> Get in touch with us</div>
 
 <div class="row">
   <div class="col-md-6">
-    <h2>InternsGoPro in Forbes</h2>
+    <div class="title-class">InternsGoPro in Forbes</div>
     <img src="label-page/Forbes.png" width:"420" height="142px">
-    <p>We were selected among the “30 brightest young entrepreneurs, breakout talents and change agents in the sector of social entrepreneurship in Europe”.</p>
+    <div class="paragraph">We were selected among the “30 brightest young entrepreneurs, breakout talents and change agents in the sector of social entrepreneurship in Europe”.</div>
   </div>
   <div class="col-md-6">
-    <h2>We look forward to make you stand out</h2>
+    <div class="title-class">We look forward to make you stand out</div>
   </div>
 
 </div>
