Some design changes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,7 +86,7 @@
 
         <ul class="nav navbar-nav">
           <li class="<%= "active" if current_page?("/") %>">
-            <%= link_to "Internship Reviews", reviews_path %>
+            <%= link_to "Internship Reviews", new_rating_path %>
           </li>
         </ul>
 
