--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -11,8 +11,18 @@ body {
 p, ol, ul, td {
   // Had to comment this out because it is interfering with the css
   // font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px;
+   font-family: OpenSans;
+   font-weight: normal;
+   font-style: normal;
+   font-stretch: normal;
+   line-height: 21px;
+   letter-spacing: normal;
+   color: #4c4a4e;
+
+}
+
+p {
+  font-size: 18px;
 }
 
 pre {
